<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/recipe_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <!--Header-->
            <RelativeLayout
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/bg_color">

                <TextView
                    android:id="@+id/title_ek1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="Cách chế biến"
                    android:textColor="@color/_bg__create_recipe_ek2_color"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <!--Thông tin món ăn-->
            <LinearLayout
                android:id="@+id/Information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <!--Hình ảnh món ăn-->
                <ImageView
                    android:id="@+id/mealImage"
                    android:layout_width="335dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="food_thumbnail"
                    android:src="@drawable/food_thumbnail" />

                <!--Review-->
                <RelativeLayout
                    android:id="@+id/label___reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/reviewCount"

                        android:layout_width="118dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="49dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/total_reviews___label_string"
                        android:textColor="@color/total_reviews___label_color"
                        android:textSize="14sp" />


                    <RelativeLayout
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp">


                        <RelativeLayout
                            android:id="@+id/icon_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="2dp">

                            <View
                                android:id="@+id/rectangle_1"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:alpha="0"
                                android:background="@drawable/rectangle_1_shape" />

                            <ImageView
                                android:id="@+id/star"
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginStart="2dp"
                                android:layout_marginTop="2dp"
                                android:contentDescription="star"
                                android:src="@drawable/star" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/reviewScore"
                            android:layout_width="41dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="19dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/label_ek6_string"
                            android:textColor="@color/title_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </RelativeLayout>

                <!--Khung thông tin-->
                <RelativeLayout
                    android:id="@+id/creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp">

                    <!--Avatar-->
                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="41dp"
                        android:layout_height="41dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="avatar"
                        android:src="@drawable/avatar" />

                    <!--Thông tin-->
                    <RelativeLayout
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="51dp"
                        android:layout_marginTop="0dp">

                        <!--Địa điểm-->
                        <RelativeLayout
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="24dp">

                            <TextView
                                android:id="@+id/label_ek7"

                                android:layout_width="128dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="0dp"
                                android:text="@string/label_ek7_string"
                                android:textColor="@color/total_reviews___label_color"
                                android:textSize="14sp" />


                            <RelativeLayout
                                android:id="@+id/iconly_curved_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="2dp">

                                <View
                                    android:id="@+id/rectangle_1_ek1"
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_marginStart="0dp"
                                    android:layout_marginTop="0dp"
                                    android:alpha="0"
                                    android:background="@drawable/rectangle_1_ek1_shape" />

                                <ImageView
                                    android:id="@+id/exclude"
                                    android:layout_width="10dp"
                                    android:layout_height="12dp"
                                    android:layout_marginStart="3dp"
                                    android:layout_marginTop="2dp"
                                    android:contentDescription="exclude"
                                    android:src="@drawable/exclude" />

                            </RelativeLayout>

                        </RelativeLayout>

                        <!--Họ tên-->
                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="161dp"
                            android:layout_height="33dp"
                            android:layout_marginLeft="0dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/label_ek8_string"
                            android:textColor="@color/title_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </RelativeLayout>


                <!--Nút lưu công thức-->
                <ImageView
                    android:id="@+id/save"
                    android:layout_width="16.44dp"
                    android:layout_height="20.5dp"
                    android:layout_marginLeft="340dp"
                    android:layout_marginTop="-95dp"
                    android:src="@drawable/union" />

            </LinearLayout>

            <!--Nguyên liệu-->
            <LinearLayout
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <!--Header nguyên liệu-->
                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="189dp"
                        android:layout_height="42dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:text="Nguyên liệu"
                        android:textColor="@color/title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="300dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/label_string"
                        android:textColor="@color/title_color"
                        android:textSize="14sp" />

                </RelativeLayout>

                <!--Nguyên liệu-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredients_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/image_1"
                android:layout_width="335dp"
                android:layout_height="323dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/image_1"/>

            <Button
                android:id="@+id/xemCongThuc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:text="Xem công thức nấu"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>